# RabbitCoding

./: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: build.yml
.qoder/: plan.md
.qoder/specs/: 文件树折叠与搜索面板_task-440.md
public/: avatar.png.bak.ios-dark.20260616045218  voice-processor.js
scripts/: setup-node-runtime.mjs
sidecar/: package.json  pnpm-lock.yaml
sidecar/scripts/: setup-resources.mjs
sidecar/src/: agent.ts  index.ts  protocol.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons.bak.dock-padding.20260616045853/: icon.icns
src-tauri/icons.bak.ios-dark.20260616045218/: icon.icns
src-tauri/src/: auth.rs  claude_mem.rs  db.rs  ecc.rs  feedback.rs  gitnexus.rs  integration.rs  lib.rs  main.rs  model_test.rs  network.rs  process_ext.rs  prompt_optimize.rs  sidecar.rs  voice.rs  worktree.rs
src-tauri/src/wiki/: ai.rs  commands.rs  mod.rs  notify.rs  prompts.rs  queue.rs  tools.rs  types.rs  utils.rs
src-tauri/src/wiki/generator/: catalog.rs  helpers.rs  meta.rs  mod.rs  orchestrator.rs  repo.rs  workspace.rs
src/components/: ContentArea.tsx  KnowledgeBasePage.tsx  PluginMarketPage.tsx  RightPanel.tsx  TodoPage.tsx
src/constants/: providers.ts
src/hooks/: useAgent.ts  useAgentConfigs.ts  useAgentContext.tsx  useAuth.tsx  useCodebaseIndex.tsx  useLocalStorage.ts  useModelTest.ts  useOnlineModels.ts  useOptimizePrompt.ts  usePlugins.ts  useResizable.ts  useTheme.tsx  useTodos.ts  useUsage.ts  useVoiceInput.ts  useVoiceSupported.ts  useWorkspaces.ts
src/i18n/: context.ts  index.tsx  useI18n.ts
src/types/: index.ts  terminal.ts
(+384 files in other folders)
