[package]
name = "rabbit-coding"
version = "0.1.0"
description = "Rabbit Coding"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rabbit_coding_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-pty = "0.3.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "sync", "time"] }
xcap = "0.9"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dwmapi", "windef", "minwindef"] }

# sherpa-onnx 官方未提供 Windows ARM64 预编译库
# 仅在受支持的目标上启用语音识别功能
[target.'cfg(not(all(target_os = "windows", target_arch = "aarch64")))'.dependencies]
sherpa-onnx = { version = "1.13", default-features = false, features = ["static"] }
